[package]
name = "gles-rust-binding"
version = "0.1.0"
authors = ["周晓林 <zhouxiaolinux@163.com>"]

[dependencies]
opengl_es_rs = { git = "https://github.com/Michael-Lfx/OpenGL_ES_Rust_Binding.git", branch = "master" }
regex = "1.0.4"
fnv = "1.0.6"

[lib]
name = "gles_rust_binding"
path = "src/lib.rs"
