[package]
name = "libgpuimage"
version = "0.1.0"
authors = ["周晓林 <zhouxiaolinux@163.com>"]

[dependencies]
libc = { version = "0.2.43", default-features = false }
objc_id = { git = "http://github.com/SSheldon/rust-objc-id"}
opengl_es_rs = { git = "https://github.com/Michael-Lfx/OpenGL_ES_Rust_Binding.git", branch = "master" }
regex = "1.0.4"
fnv = "1.0.6"

[target.'cfg(target_os="ios")'.dependencies]
objc = "0.2.5"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }

[lib]
name = "gpuimage"
crate-type = ["staticlib"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
