[package]
name = "libgpuimage"
version = "0.1.0"
authors = ["周晓林 <zhouxiaolinux@163.com>"]
edition = "2018"

[dependencies]
libc = { version = "0.2.43", default-features = false }
gles-rust-binding = { path = "../gles-rust-binding", version = "0.1.0"}
fnv = "1.0.6"
log = "0.4.5"

[features]

[target.'cfg(target_os="ios")'.dependencies]
objc = "0.2.5"
ios-rust-binding = { path = "../ios-rust-binding", version = "0.1.0"}


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.1", default-features = false }
android_logger = "0.6.0"

[lib]
name = "gpuimage"
crate-type = ["staticlib","cdylib"]



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
